# aws-config-rule-fixer

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
aws_config_rule_fixer/: __init__.py  __main__.py  ec2_ebs_encryption_by_default.py  pyproject.py  s3_bucket_ssl_requests_only.py
aws_config_rule_fixer/checks/: check_ec2_imdsv2.py
aws_config_rule_fixer/fixes/: cloud_trail_log_file_validation_enabled.py  ec2_default_rule_egress_removal.py  ec2_ebs_encryption_by_default.py  ec2_ebs_encryption_handler.py  s3_bucket_ssl_requests_only.py
