[tool.poetry]
name = "aws-config-rule-fixer"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.122"
pydantic = "^2.7.2"
click = "^8.1.7"
loguru = "^0.7.2"
questionary = "^2.0.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.scripts]
s3-bucket-ssl-requests-only = "aws_config_rule_fixer.fixes.s3_bucket_ssl_requests_only:main"
ec2-ebs-encryption-by-default = "aws_config_rule_fixer.fixes.ec2_ebs_encryption_by_default:main"
ec2-default-rule-egress-removal = "aws_config_rule_fixer.fixes.ec2_default_rule_egress_removal:main"
aws-config-rule-fixer = "aws_config_rule_fixer.__main__:cli"
cloud-trail-log-file-validation-enabled = "aws_config_rule_fixer.fixes.cloud_trail_log_file_validation_enabled:main"
check-ec2-imdsv2 = "aws_config_rule_fixer.checks.check_ec2_imdsv2:main"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest = "^8.2.1"
types-boto3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aws-config-rule-fixer"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
