[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
name = "aws-config-rule-fixer"
version = "0.1.0"
description = "AWS configuration fixes to match config rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.19",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "pydantic>=2.9.1",
    "questionary>=2.0.1",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "boto3-stubs>=1.35.19",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "types-boto3>=1.0.2",
]
